--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BasicBankingSystem">
-        <activity
-            android:name=".TransferMoney"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.BasicBankingSystem.NoActionBar"></activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
+
         <activity
             android:name=".SplashScreen"
             android:theme="@style/Theme.BasicBankingSystem.NoActionBar">
@@ -22,15 +23,37 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.BasicBankingSystem.NoActionBar"></activity>
+            android:theme="@style/Theme.BasicBankingSystem.NoActionBar" />
 
         <activity
             android:name=".UsersActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.BasicBankingSystem" />
+
+        <activity
+            android:name=".UserData"
+            android:parentActivityName=".UsersActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.BasicBankingSystem">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".UsersActivity" />
+        </activity>
+
+        <activity
+            android:name=".SendToUser"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.BasicBankingSystem" />
+
+        <activity
+            android:name=".TransferMoney"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.BasicBankingSystem.NoActionBar" />
+
         <activity
             android:name=".HistoryListActivity"
             android:label="History"
@@ -41,20 +64,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".UsersActivity" />
         </activity>
-        <activity
-            android:name=".UserData"
-            android:parentActivityName=".UsersActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.BasicBankingSystem">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".UsersActivity" />
-        </activity>
-        <activity
-            android:name=".SendToUser"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.BasicBankingSystem"></activity>
-
     </application>
 
 </manifest>
